# osmium

./: Cargo.toml
sql/: hostmgr.pgsql  repomgr.pgsql
src/: main.rs
src/common/: config.rs
src/hostmgr/: hostscan.rs  mod.rs  scanner.rs  ssh_client.rs
src/hostmgr/model/: hosts.rs  mod.rs  packages.rs
src/hostmgr/model/baks/: disks.rs  groups.rs  hosts.rs  mod.rs  mounts.rs  netlinks.rs  prelude.rs  services.rs  users.rs
src/web/: host.rs  mod.rs  router.rs  scan.rs  snoozy.rs
