[package]
name = "osmium"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
axum = { version = "0.8.9", features = ["http2"] }
clap = { version = "4.6.0", features = ["derive"] }
futures = "0.3.32"
ping = "0.7.1"
reqwest = { version = "0.13.2", features = ["rustls-no-provider", "json", "gzip", "query"] }
russh = { version = "0.60.0", features = ["async-trait", "serde"] }
sea-orm = { version = "2.0.0-rc", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros" ] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.52.0", features = ["full"] }
